--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.abdul.pieasstudentdirectory">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-feature
+        android:name="android.hardware.camera2"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -15,31 +21,37 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
+            android:label="@string/student_list"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".RegistrationActivity"
+            android:label="@string/registration_form"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.ALTERNATIVE" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".SearchActivity"
-            android:screenOrientation="portrait">
-        </activity>
-
+            android:label="@string/search_student"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".ShowStudentActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:label="@string/student_name"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ImageSelect"
+            android:label="@string/student_image"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".LargeUserImage"></activity>
     </application>
 
 </manifest>
